--- a/resources/invidious_blocklist.yaml
+++ b/resources/invidious_blocklist.yaml
@@ -15,6 +15,7 @@ channelsToHide:
   - "Vox"
   - "William Osman"
   - "xkcd's What If?"
+  - "Adam Savage’s Tested"
 
 keywordsToHide:
   - "#shorts"
