Renamed function & no case sensitivity

--- a/resources/invidious_blocklist.yaml
+++ b/resources/invidious_blocklist.yaml
@@ -16,6 +16,16 @@ channelsToHide:
   - "William Osman"
   - "xkcd's What If?"
   - "Adam Savage’s Tested"
+  - "jacksepticeye"
+  - "DankPods"
+  - "Internet Historian"
+  - "DougDoug"
+  - "The Critical Drinker"
+  - "hololive ホロライブ - VTuber Group"
+  - "Second Thought"
+  - "vinesauce"
 
 keywordsToHide:
   - "#shorts"
+  - "reacts"
+  - "reacting"
