--- a/resources/invidious_blocklist.yaml
+++ b/resources/invidious_blocklist.yaml
@@ -1,31 +1,52 @@
 channelsToHide:
+  - "Adam Savage’s Tested"
   - "Asmongold TV"
   - "Be Smart"
   - "Daily Dose Of Internet"
+  - "DankPods"
+  - "Danny Gonzalez"
+  - "DougDoug"
+  - "Fredrik Knudsen"
   - "gameranx"
+  - "Garbage Time"
+  - "Gigguk"
+  - "hololive ホロライブ - VTuber Group"
+  - "Internet Historian"
+  - "jacksepticeye"
+  - "JaidenAnimations"
+  - "Kurtis Conner"
   - "LastWeekTonight"
+  - "Let's Game It Out"
+  - "Markiplier"
+  - "Marques Brownlee"
   - "MeatCanyon"
   - "Mental Outlaw"
   - "MrBeast"
   - "penguinz0"
   - "PowerfulJRE"
   - "Primitive Technology"
+  - "RTGame"
   - "Scott The Woz"
+  - "Second Thought"
+  - "SsethTzeentach"
+  - "Super Eyepatch Wolf"
+  - "The Critical Drinker"
+  - "The Film Theorists"
+  - "The Game Theorists"
+  - "The Spiffing Brit"
+  - "TheOdd1sOut"
+  - "TierZoo"
   - "Tom Scott plus"
+  - "videogamedunkey"
+  - "vinesauce"
   - "Vox"
   - "William Osman"
   - "xkcd's What If?"
-  - "Adam Savage’s Tested"
-  - "jacksepticeye"
-  - "DankPods"
-  - "Internet Historian"
-  - "DougDoug"
-  - "The Critical Drinker"
-  - "hololive ホロライブ - VTuber Group"
-  - "Second Thought"
-  - "vinesauce"
 
 keywordsToHide:
   - "#shorts"
-  - "reacts"
-  - "reacting"
+  - "conspirac" # Can have multiple endings
+  - "fortnite"
+  - "react" # Can have multiple endings
+  - "roblox"
+  - "tiktok"
