Added new channels to hide

--- a/resources/invidious_blocklist.yaml
+++ b/resources/invidious_blocklist.yaml
@@ -1,11 +1,16 @@
 channelsToHide:
   - "Adam Savage’s Tested"
   - "Asmongold TV"
+  - "BBC News"
   - "Be Smart"
+  - "carwow"
+  - "CNBC"
   - "Daily Dose Of Internet"
   - "DankPods"
   - "Danny Gonzalez"
   - "DougDoug"
+  - "DW Documentary"
+  - "DW News"
   - "Fredrik Knudsen"
   - "gameranx"
   - "Garbage Time"
@@ -23,7 +28,9 @@ channelsToHide:
   - "Marques Brownlee"
   - "MeatCanyon"
   - "Mental Outlaw"
+  - "More Perfect Union"
   - "MrBeast"
+  - "MSNBC"
   - "penguinz0"
   - "PowerfulJRE"
   - "Primitive Technology"
