--- a/resources/invidious_blocklist.yaml
+++ b/resources/invidious_blocklist.yaml
@@ -11,6 +11,7 @@ channelsToHide:
   - "DougDoug"
   - "DW Documentary"
   - "DW News"
+  - "Fox News"
   - "Fredrik Knudsen"
   - "gameranx"
   - "Garbage Time"
