Added new items

--- a/resources/invidious_blocklist.yaml
+++ b/resources/invidious_blocklist.yaml
@@ -3,7 +3,9 @@ channelsToHide:
   - "Asmongold TV"
   - "BBC News"
   - "Be Smart"
+  - "Bloomberg Originals"
   - "carwow"
+  - "CNA Insider"
   - "CNBC"
   - "Daily Dose Of Internet"
   - "DankPods"
@@ -17,12 +19,15 @@ channelsToHide:
   - "Garbage Time"
   - "Gigguk"
   - "GLITCH"
+  - "Half as Interesting"
   - "hololive ホロライブ - VTuber Group"
   - "Internet Historian"
   - "jacksepticeye"
   - "JaidenAnimations"
+  - "Karl Jobst"
   - "Kurtis Conner"
   - "LastWeekTonight"
+  - "LegalEagle"
   - "Let's Game It Out"
   - "Lofi Girl"
   - "Markiplier"
@@ -36,10 +41,13 @@ channelsToHide:
   - "PowerfulJRE"
   - "Primitive Technology"
   - "RTGame"
+  - "SciShow"
   - "Scott The Woz"
   - "Second Thought"
+  - "Sky News"
   - "SsethTzeentach"
   - "Super Eyepatch Wolf"
+  - "TerminalMontage"
   - "The Critical Drinker"
   - "The Film Theorists"
   - "The Game Theorists"
