Added new channels to blocklist

--- a/resources/invidious_blocklist.yaml
+++ b/resources/invidious_blocklist.yaml
@@ -4,7 +4,9 @@ channelsToHide:
   - "BBC News"
   - "Be Smart"
   - "Bloomberg Originals"
+  - "Bloomberg Originals"
   - "carwow"
+  - "Chubbyemu"
   - "CNA Insider"
   - "CNBC"
   - "Daily Dose Of Internet"
@@ -34,6 +36,7 @@ channelsToHide:
   - "Marques Brownlee"
   - "MeatCanyon"
   - "Mental Outlaw"
+  - "More Perfect Union"
   - "More Perfect Union"
   - "MrBeast"
   - "MSNBC"
