Added new items

--- a/resources/invidious_blocklist.yaml
+++ b/resources/invidious_blocklist.yaml
@@ -5,6 +5,7 @@ channelsToHide:
   - "Be Smart"
   - "Bloomberg Originals"
   - "Bloomberg Originals"
+  - "Bloomberg Television"
   - "carwow"
   - "Chubbyemu"
   - "CNA Insider"
@@ -40,9 +41,12 @@ channelsToHide:
   - "More Perfect Union"
   - "MrBeast"
   - "MSNBC"
+  - "National Geographic"
+  - "NBC News"
   - "penguinz0"
   - "PowerfulJRE"
   - "Primitive Technology"
+  - "Reuters"
   - "RTGame"
   - "SciShow"
   - "Scott The Woz"
@@ -54,7 +58,9 @@ channelsToHide:
   - "The Critical Drinker"
   - "The Film Theorists"
   - "The Game Theorists"
+  - "The Guardian"
   - "The Spiffing Brit"
+  - "The Thought Emporium"
   - "TheOdd1sOut"
   - "TierZoo"
   - "Tom Scott plus"
